--- a/src/main/webapp/glogin.html
+++ b/src/main/webapp/glogin.html
@@ -1,7 +1,7 @@
 <html lang="en">
   <head>
     <meta name="google-signin-scope" content="profile email">
-    <meta name="google-signin-client_id" content="927375242383-t21v9ml38tkh2pr30m4hqiflkl3jfohl.apps.googleusercontent.com">
+    <meta name="689297071615-irgk1dtiu0ts6bntktqmshsc7u44610o.apps.googleusercontent.com">
     <script src="https://apis.google.com/js/platform.js" async defer></script>
   </head>
   <body>
