--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,59 +3,18 @@
 <head>
 <meta http-equiv="content-type"
 	content="application/xhtml+xml; charset=UTF-8" />
-<title>Hello App Engine</title>
+<title>TinyInsta groupe A</title>
 </head>
 
 <body>
-	<h1>Web and Cloud</h1>
+	<h1>TinyInsta groupe A</h1>
 
-Be sure you loaded this page with "https://"
-
-<h2>Check if it works</h2>
-	<li><a href='/hello'>The servlet Hello world</a>
 	
-<h2>Check login Google</h2>	
-	<li><a href="https://developers.google.com/identity/sign-in/web/sign-in#before_you_begin">see docs</a>
-	<li><a href='/userapi'>Login with Google (servlet)</a>
-	<li><a href='/glogin.html'>Login with Google (javascript)</a>
+<h2>Connexion</h2>	
+	<li><a href='/glogin-mithril.html'>Login with Google</a>
+
+<h2>Exemple projet</h2>	
+	<li><a href='/indexBis.html'>accès a l'index du cours</a>
 	
-	
-<h2>Simple Javascript to call Rest Interface</h2>
-	<li><a href='/_ah/api/myApi/v1/topscores'>REST Call topscores</a>
-	<li><a href='/index3.html'>Scores with Mithril</a>
-	<li><a href='/index2.html'>Scores with React</a>
-
-<h2>Understanding contention with counters</h2>
-	<li><a href='/count'>Counter no transaction</a>
-	<li><a href='/counttr'>Counter with transactions</a>
-	<li><a href='/countsh'>Sharded Counter with transactions</a>
-
-
-<h2>Data Queries for managing Friends</h2>	
-	<li><a href='/friends'>Populate the Friend table (long)</a>
-	<li><a href='/query'>Query the Friend table</a>
-	
-<h2>Data Queries for managing Posts</h2>	
-	<li><a href='/prefixclean'>clean post data (long)</a>
-	<li><a href='/prefix'>install post data (long)</a>
-	<li><a href='/prefixquery'>Raw queries on post data</a>
-    <li><a href='/post.html'>Unsecure MyPost</a>
-    <li><a href='/glogin-mithril.html'>Secure MyPost</a>
-	<li><a href='/MsgIndex'>Msg - MsgIndex - Key/Parent Key</a>
-	
-<h2>Data Queries for managing Petitions</h2>	
-	<li><a href='/petition'>install petition like data (long)</a>
-	<li><a href='/pquery'>query petition data</a>
-			
-
-<h1>Fetch scores below:</h1>
-
-
-		<p id="toto"></p> <script>
-    const url = "_ah/api/myApi/v1/topscores"
-    fetch(url)
-    .then(response => response.text())
-    .then(data => document.getElementById('toto').innerHTML = data)
-  </script>
 </body>
 </html>
