--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,11 +3,11 @@
 <head>
 <meta http-equiv="content-type"
 	content="application/xhtml+xml; charset=UTF-8" />
-<title>TinyInsta groupe A</title>
+<title>TinyGrame groupe A</title>
 </head>
 
 <body>
-	<h1>TinyInsta groupe A</h1>
+	<h1>TinyGrame groupe A Deploye Nb 26</h1>
 
 	
 <h2>Connexion</h2>	
