--- a/src/main/webapp/glogin.html
+++ b/src/main/webapp/glogin.html
@@ -2,6 +2,8 @@
   <head>
     <meta name="google-signin-scope" content="profile email">
     <meta name="689297071615-irgk1dtiu0ts6bntktqmshsc7u44610o.apps.googleusercontent.com">
+    <!-- 689297071615-irgk1dtiu0ts6bntktqmshsc7u44610o.apps.googleusercontent.com -->
+    <!-- 914119626620-nkqsg1662c07sdc0vkc9u90d32aofmch.apps.googleusercontent.com -->
     <script src="https://apis.google.com/js/platform.js" async defer></script>
   </head>
   <body>
