--- a/src/main/webapp/glogin-mithril.html
+++ b/src/main/webapp/glogin-mithril.html
@@ -36,7 +36,7 @@ var Profile={
   list:[],
   view: function(){
 	return m('div', {class:'container'}, [
-  	  m("h1", {class: 'title'}, "Pseudo 15:56:"+Profile.name),
+  	  m("h1", {class: 'title'}, "Pseudo 16:37:"+Profile.name),
 	  m("h2", {class: 'subtitle'}, "email:"+Profile.email),
 	  m("img",{"src":Profile.url}),
 	  m('div', {class:'field'},[
@@ -148,7 +148,7 @@ var PostView = {
 		                 }},"del")),
 			        m('td', m('label', item.properties.body)),
 			        m('td', m('img', {class: 'is-rounded', 'src': item.properties.url})),
-			        m('td', m('label', item.properties.likec.length)),
+			        m('td', m('label', (item.properties.likec.length)-1)),
 			      ])
 			    }),
 //			    m("div", isError ? "An error occurred" : "Saved"),
