--- a/src/main/webapp/glogin-mithril.html
+++ b/src/main/webapp/glogin-mithril.html
@@ -31,6 +31,7 @@ var Profile={
   ID:"",
   url:"",
   URLpost:"",
+  cptFollower: "",
   body:"",
   nextToken:"",
   list:[],
@@ -38,7 +39,7 @@ var Profile={
 	return m('div', {class:'container'}, [
   	  m("h1", {class: 'title'}, "Pseudo: "+Profile.name),
 	  m("h2", {class: 'subtitle'}, "email:"+Profile.email),
-	  m("h2", {class: 'subtitle'}, "Follower: over 9000-15:00"),
+	  m("h2", {class: 'subtitle'}, "Follower: "+Profile.cptFollower),
 	  m("img",{"src":Profile.url}),
 	  m('div', {class:'field'},[
 	         m("label", {class:'label'},"Follow"),
@@ -110,19 +111,6 @@ var Profile={
 	 			Profile.loadList()
     	 	})
 	},
-	/*cptFollower: function() {
-		//var data={'url': Profile.URLpost,
-			//	'body': Profile.body}
-		return m.request({
-    		method: "POST",
-    		url: "_ah/api/myApi/v1/cptfollower"+'?access_token='+encodeURIComponent(Profile.ID),
-        	//params: data,
-    	})
-	    	.then(function(result) {
-	 			console.log("nb follower:",result)
-	 			Profile.loadList()
-    	 	})
-	},*/
   follow: function() {
 		var data={'mail': Profile.email,
 				'mailFollow': Profile.emailfollow}
@@ -219,6 +207,8 @@ function onSignIn(googleUser) {
 		method: "POST",
 		url: "_ah/api/myApi/v1/addprofil"+'?access_token='+encodeURIComponent(Profile.ID),
   		params: data,
+	}).then((result) => {
+		Profile.cptFollower = result.properties.follower.length-1;
 	})
    
 }
